[tool.poetry]
name = "bridgekeeper"
version = "0.9"
description = "Django permissions that work with QuerySets."
homepage = "https://bridgekeeper.leigh.party/"
repository = "https://github.com/excitedleigh/bridgekeeper"
authors = ["Leigh Brenecki <leigh@brenecki.id.au>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]
djangorestframework = "^3.10"
pytest = "^5.0"
pytest-django = "^3.5"
pytest-pythonpath = "^0.7.3"
prospector = "^1.1"
factory-boy = "^3.3.0"

sphinx = "^3.1.1"
sphinx-rtd-theme = "^0.5.0"
[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
[build-system]
requires = ["poetry>=1.7"]
build-backend = "poetry.core.masonry.api"
